--- a/uasdm-ui/src/app/site/component/modal/entity-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/entity-modal.component.html
@@ -24,8 +24,8 @@
       <div *ngIf="evaluate(attribute)" class="form-group">
         <div *ngIf="attribute.type === 'text'">
           <label>{{attribute.label}}</label>
-          <input [(ngModel)]="entity[attribute.name]" [name]="attribute.name" type="input" class="form-control"
-            [disabled]="attribute.readonly" [placeholder]="attribute.label" [required]="attribute.required" />
+       	  <input [(ngModel)]="entity[attribute.name]" [name]="attribute.name" type="input" class="form-control"
+          	[disabled]="attribute.readonly" [placeholder]="attribute.label" [required]="attribute.required" />
         </div>
         <div *ngIf="attribute.type === 'number'">
           <label>{{attribute.label}}</label>
@@ -42,9 +42,16 @@
         </div>
         <div *ngIf="attribute.type === 'text-area'">
           <label>{{attribute.label}}</label>
-          <textarea [(ngModel)]="entity[attribute.name]" [name]="attribute.name" [disabled]="attribute.readonly"
-            class="form-control" [required]="attribute.required">
-          </textarea>
+          <ng-container *ngIf="attribute.name == 'projectType'">
+          	<select [(ngModel)]="entity[attribute.name]" [name]="attribute.name" [disabled]="attribute.readonly" [required]="attribute.required">
+          	  <option></option>
+          	  <option *ngFor="let projectType of projectTypes" [value]="projectType">{{projectType}}</option>
+          	</select>
+          </ng-container>
+          <ng-container *ngIf="attribute.name != 'projectType'">
+          	<textarea [(ngModel)]="entity[attribute.name]" [name]="attribute.name" [disabled]="attribute.readonly"
+              class="form-control" [required]="attribute.required"></textarea>
+          </ng-container>
         </div>
         <div *ngIf="attribute.type === 'point'">
           <map-attribute [site]="entity" [center]="center" [zoom]="zoom"></map-attribute>
