--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -265,7 +265,7 @@
 
             <div id="hierarchy-tree-container"
               class="location-management-widget-section location-management-list-container"
-              [style]="current != null && current.type === 0 ? 'height: calc(100vh - 257px);overflow-y: auto;overflow-x:hidden;' : 'height: calc(100vh - 325px);overflow-y: auto;overflow-x:hidden;'">
+              [style]="(current != null && current.type === 0) || syncs.length === 0 ? 'height: calc(100vh - 257px);overflow-y: auto;overflow-x:hidden;' : 'height: calc(100vh - 325px);overflow-y: auto;overflow-x:hidden;'">
 
 
               <div class="row" style="margin-left: 10px;">
