--- a/uasdm-ui/src/app/site/component/sensor/sensor.component.html
+++ b/uasdm-ui/src/app/site/component/sensor/sensor.component.html
@@ -48,25 +48,33 @@
         </select>
       </div>
       <div class="form-group">
-      	<boolean-field [value]="sensor.hasGeologger" (valueChange)="sensor.hasGeologger = $event"
-            [label]="'Has GeoLogger'"
-            [disabled]="mode === 'READ'"></boolean-field>
+        <boolean-field [value]="sensor.hasGeologger" (valueChange)="sensor.hasGeologger = $event"
+          [label]="'Has GeoLogger'" [disabled]="mode === 'READ'"></boolean-field>
       </div>
       <div class="form-group">
         <label>Pixel Size Width</label>
-        <input [(ngModel)]="sensor.pixelSizeWidth" name="pixelSizeWidth" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
+        <input [(ngModel)]="sensor.pixelSizeWidth" name="pixelSizeWidth" type="number" step="0" class="form-control"
+          [disabled]="mode === 'READ'" required />
       </div>
       <div class="form-group">
         <label>Pixel Size Height</label>
-        <input [(ngModel)]="sensor.pixelSizeHeight" name="pixelSizeHeight" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
+        <input [(ngModel)]="sensor.pixelSizeHeight" name="pixelSizeHeight" type="number" step="0" class="form-control"
+          [disabled]="mode === 'READ'" required />
       </div>
       <div class="form-group">
         <label>Sensor Width</label> (millimeters)
-        <input [(ngModel)]="sensor.sensorWidth" name="sensorWidth" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
+        <input [(ngModel)]="sensor.sensorWidth" name="sensorWidth" type="number" step="0" class="form-control"
+          [disabled]="mode === 'READ'" required />
       </div>
       <div class="form-group">
         <label>Sensor Height</label> (millimeters)
-        <input [(ngModel)]="sensor.sensorHeight" name="sensorHeight" type="number" step="0" class="form-control" [disabled]="mode === 'READ'" required />
+        <input [(ngModel)]="sensor.sensorHeight" name="sensorHeight" type="number" step="0" class="form-control"
+          [disabled]="mode === 'READ'" required />
+      </div>
+      <div class="form-group">
+        <label>Focal Length</label> (millimeters)
+        <input [(ngModel)]="sensor.focalLength" name="focalLength" type="number" class="form-control"
+          [disabled]="mode === 'READ'" required />
       </div>
       <div class="form-group">
         <label>Wave Length</label>
