--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -43,6 +43,13 @@
       </div>
 
       <div class="row">
+        <div class="col-md-12">
+          <label>Collection End Date: </label> &nbsp; {{entity.collectionEndDate | idmdate : "MMM dd, yyyy"}}
+        </div>
+      </div>
+
+
+      <div class="row">
         <div class="col-md-6">
           <label>Sensor:</label>
 
