--- a/uasdm-ui/src/app/site/component/modal/product-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/product-modal.component.html
@@ -61,6 +61,13 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-12">
+          <label>Collection End Date: </label> &nbsp; {{product.collectionEndDate | idmdate : "MMM dd, yyyy"}}
+        </div>
+      </div>
+
+
       
       <div class="row">
         <div class="col-md-6">
