--- a/uasdm-ui/src/app/site/component/metadata-page/metadata-page.component.html
+++ b/uasdm-ui/src/app/site/component/metadata-page/metadata-page.component.html
@@ -146,30 +146,21 @@
                                     <input [(ngModel)]="artifact.ptEpsg" name="ptEpsg" type="text"
                                         class="form-control" />
                                 </div>
-                                <div class="form-group">
-                                    <label for="startDate">Point Cloud Start Date</label>
-                                    <input [(ngModel)]="artifact.startDate" name="startDate" type="date"
-                                        class="form-control" />
-                                </div>
-                                <div class="form-group">
-                                    <label for="endDate">Point Cloud End Date</label>
-                                    <input [(ngModel)]="artifact.endDate" name="endDate" type="date"
-                                        class="form-control" />
-                                </div>
                             </ng-container>
 
                             <ng-container *ngIf="artifact.folder === 'ortho'">
                                 <div class="form-group">
-                                    <label for="startDate">Ortho Start Date</label>
-                                    <input [(ngModel)]="artifact.startDate" name="startDate" type="date"
-                                        class="form-control" />
+                                    <label for="orthoCorrectionModel">Ortho Correction Model</label>
+                                    <select [(ngModel)]="artifact.orthoCorrectionModel" name="orthoCorrectionModel"
+                                        class="form-control">
+                                        <option></option>
+                                        <option value="DSM">DSM</option>
+                                        <option value="DTM">DTM</option>
+                                        <option value="unknown">Unknown</option>
+                                    </select>
                                 </div>
-                                <div class="form-group">
-                                    <label for="endDate">Ortho End Date</label>
-                                    <input [(ngModel)]="artifact.endDate" name="endDate" type="date"
-                                        class="form-control" />
-                                </div>
-                            </ng-container>                            
+
+                            </ng-container>
                         </div>
                     </div>
                 </div>
