--- a/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
@@ -71,17 +71,13 @@
             <div class="col-md-2"></div>
             <div class="col-md-8">
               <div class="form-group">
-                <label for="startDate">Ortho Start Date</label>
-                <input [(ngModel)]="values.startDate" name="startDate" type="date" class="form-control" />
-              </div>
-            </div>
-          </div>
-          <div [@fadeInOnEnter] class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-              <div class="form-group">
-                <label for="endDate">Ortho End Date</label>
-                <input [(ngModel)]="values.endDate" name="endDate" type="date" class="form-control" />
+                <label for="orthoCorrectionModel">Ortho Correction Model</label>
+                <select [(ngModel)]="values.orthoCorrectionModel" name="orthoCorrectionModel" class="form-control">
+                  <option></option>
+                  <option value="DSM">DSM</option>
+                  <option value="DTM">DTM</option>
+                  <option value="unknown">Unknown</option>
+                </select>
               </div>
             </div>
           </div>
@@ -111,25 +107,7 @@
             <div class="col-md-8">
               <div class="form-group">
                 <label for="ptEpsg">Point Cloud EPSG Number</label>
-                <input [(ngModel)]="values.ptEpsg" name="ptEpsg" type="input" class="form-control" placeholder="" />
-              </div>
-            </div>
-          </div>
-          <div [@fadeInOnEnter] class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-              <div class="form-group">
-                <label for="startDate">Point Cloud Start Date</label>
-                <input [(ngModel)]="values.startDate" name="startDate" type="date" class="form-control" />
-              </div>
-            </div>
-          </div>
-          <div [@fadeInOnEnter] class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-              <div class="form-group">
-                <label for="endDate">Point Cloud End Date</label>
-                <input [(ngModel)]="values.endDate" name="endDate" type="date" class="form-control" />
+                <input [(ngModel)]="values.ptEpsg" name="ptEpsg" type="text" class="form-control" placeholder="" />
               </div>
             </div>
           </div>
