--- a/uasdm-ui/src/app/site/component/metadata-page/metadata-page.component.html
+++ b/uasdm-ui/src/app/site/component/metadata-page/metadata-page.component.html
@@ -143,9 +143,16 @@
                             <ng-container *ngIf="artifact.folder === 'ptcloud'">
                                 <div class="form-group">
                                     <label for="ptEpsg">EPSG Number</label>
-                                    <input [(ngModel)]="artifact.ptEpsg" name="ptEpsg" type="text"
+                                    <input [(ngModel)]="artifact.ptEpsg" name="ptEpsg" type="number" step="1" min="0"
                                         class="form-control" />
                                 </div>
+
+                                <div class="form-group">
+                                    <label for="projectionName">Projection Name</label>
+                                    <input [(ngModel)]="artifact.projectionName" name="projectionName" type="text"
+                                        class="form-control" />
+                                </div>
+
                             </ng-container>
 
                             <ng-container *ngIf="artifact.folder === 'ortho'">
