--- a/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
@@ -107,7 +107,16 @@
             <div class="col-md-8">
               <div class="form-group">
                 <label for="ptEpsg">Point Cloud EPSG Number</label>
-                <input [(ngModel)]="values.ptEpsg" name="ptEpsg" type="text" class="form-control" placeholder="" />
+                <input [(ngModel)]="values.ptEpsg" name="ptEpsg" type="number" step="1" min="0" class="form-control" />
+              </div>
+            </div>
+          </div>
+          <div [@fadeInOnEnter] class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+              <div class="form-group">
+                <label for="projectionName">Point Cloud Projection Name</label>
+                <input [(ngModel)]="values.projectionName" name="projectionName" type="text" class="form-control" placeholder="" />
               </div>
             </div>
           </div>
