--- a/uasdm-ui/src/app/site/component/modal/create-collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/create-collection-modal.component.html
@@ -80,8 +80,8 @@
           <div [@fadeInOnEnter] class="row" *ngIf="hasField('collectionEndDate')">
             <div class="col-md-8">
               <label for="platform" style="margin-top: 10px;">Collection End Date:</label>
-              <input [(ngModel)]="page.selection.collectionEndDate" name="collectionEndDate" type="date" class="form-control"
-                />
+              <input [(ngModel)]="page.selection.collectionEndDate" name="collectionEndDate" type="date"
+                class="form-control" />
             </div>
           </div>
 
@@ -108,9 +108,9 @@
             <div class="col-md-8">
               <label for="proejctType" style="margin-top: 10px;">Project Type:</label>
               <select [(ngModel)]="page.selection.projectType" [name]="'projectType'">
-	            <option></option>
-	            <option *ngFor="let projectType of projectTypes" value="projectType">{{projectType}}</option>
-	          </select>
+                <option></option>
+                <option *ngFor="let projectType of projectTypes" value="projectType">{{projectType}}</option>
+              </select>
             </div>
           </div>
 
@@ -159,23 +159,23 @@
             <span class="ui-button-text">Close</span>
           </button>
 
-		  <span style="position: relative; display: inline-block;">
-	          <button *ngIf="page.index > 0" type="button btn btn-primary" [disabled]="disabled || loading" class="btn btn-secondary"
-	            (click)="handleBackPage()">
-	            Back
-	          </button>
-	
-	          <button *ngIf="page.index < (pages.length - 1)" type="button btn btn-primary"
-	            [disabled]="!isPageValid(page) || disabled || loading" class="btn btn-primary" (click)="handleNextPage()">
-	            <i class="icon-upload icon-white"></i>
-	            Next
-	          </button>
-	
-	          <button *ngIf="page.index === (pages.length - 1)" type="button btn btn-primary"
-	            [disabled]="!isPageValid(page) || disabled || loading" class="btn btn-primary" (click)="handleCreate()">
-	            <i class="icon-upload icon-white"></i>
-	            Create
-	          </button>
+          <span style="position: relative; display: inline-block;">
+            <button *ngIf="page.index > 0" type="button btn btn-primary" [disabled]="disabled || loading"
+              class="btn btn-secondary" (click)="handleBackPage()">
+              Back
+            </button>
+
+            <button *ngIf="page.index < (pages.length - 1)" type="button btn btn-primary"
+              [disabled]="!isPageValid(page) || disabled || loading" class="btn btn-primary" (click)="handleNextPage()">
+              <i class="icon-upload icon-white"></i>
+              Next
+            </button>
+
+            <button *ngIf="page.index === (pages.length - 1)" type="button btn btn-primary"
+              [disabled]="!isPageValid(page) || disabled || loading" class="btn btn-primary" (click)="handleCreate()">
+              <i class="icon-upload icon-white"></i>
+              Create
+            </button>
           </span>
         </div>
       </div>
