chore: style update for advanced filter modal

--- a/uasdm-ui/src/app/site/component/modal/filter-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/filter-modal.component.html
@@ -70,9 +70,9 @@
     <div class="row">
       <div class="col-md-12">
         <div class="btn-holder" style="text-align: right;">
-          <button type="button" (click)="close()" class="btn btn-default" role="button" aria-disabled="false"
+          <button type="button" (click)="close()" class="btn btn-primary" role="button" aria-disabled="false"
             style="padding: 4px 18px;">
-            <span class="ui-button-text">Close</span>
+            <span class="ui-button-text">Apply</span>
           </button>
         </div>
       </div>
