--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -63,8 +63,11 @@
   <div class="row">
     <div class="col-md-12">
       <div class="row" style="margin-right: 10px;">
-        <div class="col-sm-12 float-right">
-          <a (click)="onFilterOpen()"><i class="fa" [ngClass]="{'fa-filter' : !hasFilter, 'fa-funnel-dollar': hasFilter}"></i></a>
+        <div class="col-sm-12" style="text-align: right; padding-top: 10px; padding-right: 0;">
+          <a (click)="onFilterOpen()">
+            Advanced filter
+            <i class="fa" [ngClass]="{'fa-filter' : !hasFilter, 'fa-funnel-dollar': hasFilter}"></i>
+          </a>
         </div>
       </div>
 
