chore: move labeled property graph into settings page

--- a/uasdm-ui/src/app/admin/component/system/system-configuration.component.html
+++ b/uasdm-ui/src/app/admin/component/system/system-configuration.component.html
@@ -20,6 +20,10 @@
     
     <h3>Session Event Log</h3>
     <session-events></session-events>
+    
+    <labeled-property-graph-sync-table></labeled-property-graph-sync-table>
+    
+    <br/>
 
   </div>
 </div>
