--- a/uasdm-ui/src/app/admin/component/labeled-property-graph-sync/labeled-property-graph-sync-table.component.html
+++ b/uasdm-ui/src/app/admin/component/labeled-property-graph-sync/labeled-property-graph-sync-table.component.html
@@ -8,7 +8,7 @@
 
 <!-- 	<div id="app-container" class="container"> -->
 
-		<h2>Geoprism Registry Integrations</h2>
+		<h2>GeoPrism Registry Integrations</h2>
 
 		<generic-table *ngIf="config != null" [cols]="cols" [config]="config" [refresh]="refresh" (click)="onClick($event)"></generic-table>		
 <!-- 	</div> -->
