fix: users don't know the app is doing something (refs #275)

--- a/uasdm-ui/src/app/shared/component/loading-bar/loading-bar.component.html
+++ b/uasdm-ui/src/app/shared/component/loading-bar/loading-bar.component.html
@@ -3,7 +3,7 @@
 
 
 -->
-<div *ngIf="showIndicator" class="standby-overlay" style="height: 100%; width: 100%;">
+<div *ngIf="showIndicator" class="standby-overlay" style="height: 100%; width: 100%; position: fixed;">
     <div class="standby-div">
         <i class="fa fa-spinner fa-spin fa-5x"></i>
     </div>
