--- a/uasdm-ui/src/app/admin/component/system/system-configuration.component.html
+++ b/uasdm-ui/src/app/admin/component/system/system-configuration.component.html
@@ -21,6 +21,8 @@
     <h3>Session Event Log</h3>
     <session-events></session-events>
     
+    <organization-sync-table></organization-sync-table>
+
     <labeled-property-graph-sync-table></labeled-property-graph-sync-table>
     
     <br/>
